--- a/popup.css
+++ b/popup.css
@@ -34,7 +34,7 @@ img {
     float: left;
 }
 
-#title {
+#title, .small-info {
     width: 260px;
     text-overflow:ellipsis;
     white-space:nowrap;
